addons/default-request-adder.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
  labels:
    app.kubernetes.io/name: default-request-adder
  name: default-request-adder
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: default-request-adder
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: default-request-adder
    spec:
      serviceAccountName: default-request-adder
      containers:
        - name: default-request-adder
          resources:
            limits:
              memory: "50Mi"
            requests:
              memory: "50Mi"
          imagePullPolicy: Always
          image: oci.unbound.se/unboundsoftware/default-request-adder:1.6.4@sha256:428abda0b3cc07194934cede8a20a4de182afd693aae5de0ee7b9d9e7e20488a
          args:
            - /default-request-adder
            - -excluded-ns=${ excluded_namespaces }
            - -memory=1Pi
      restartPolicy: Always
